--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,11 +1,10 @@
 name: tests
 
-on:
-  pull_request
+on: pull_request
 
 jobs:
   build:
     runs-on: ubuntu_latest
     steps:
       - uses: actions/checkout@v2
-      - run: cd auth && yarn install && yarn test:ci        
+      - run: cd auth && yarn install && yarn test:ci
