--- a/payments/package.json
+++ b/payments/package.json
@@ -25,7 +25,8 @@
   },
   "scripts": {
     "start": "ts-node-dev --poll src/index.ts",
-    "test": "jest --no-cache --watchAll"
+    "test": "jest --no-cache --watchAll",
+    "test:ci": "jest"
   },
   "jest": {
     "preset": "ts-jest",
